--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "gsap": "^3.13.0",
+    "mapbox-gl": "^3.16.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-map-gl": "^8.1.0",
     "react-router-dom": "^7.9.5",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
+    "@types/react": "^19.2.2",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
