--- a/.gitignore
+++ b/.gitignore
@@ -7,24 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Dependency directories
-node_modules/
-.vite/
-dist/
-
-# Build output
+node_modules
 dist
 dist-ssr
-
-# Local config
 *.local
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 package-lock.json
 
 # Editor directories and files
@@ -37,3 +24,8 @@ package-lock.json
 *.njsproj
 *.sln
 *.sw?
+
+# Environment Variables
+venv/
+__pycache__/
+backend/.env
