--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,30 @@ package-lock.json
 *.sw?
 
 # Environment Variables
-venv/
-__pycache__/
 backend/.env
+
+# Python
+venv/
+env/
+ENV/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
