--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.14",
     "@eslint/js": "^9.36.0",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^24.6.0",
