--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.1",
     "react-map-gl": "^8.1.0",
     "react-router-dom": "^7.9.5",
+    "split-type": "^0.3.4",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
