--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"npm run flask\" \"npm run client\"",
     "flask": "cd backend-flask && flask run",
     "server": "cd backend-node && npm run dev",
-    "client": "cd frontend && npm start",
+    "client": "cd frontend && npm run dev",
     "install-all": "npm install && cd backend-node && npm install || echo 'No Node backend found' && cd ../frontend && npm install && cd ../backend-flask && python -m venv venv && . venv/bin/activate && pip install -r requirements.txt && cd ..",
     "build": "cd frontend && npm run build",
     "start": "cd backend-node && npm start"
@@ -16,7 +16,13 @@
     "type": "git",
     "url": "git+https://github.com/Carl0s4321/Snackoverflow.git"
   },
-  "keywords": ["flask", "react", "node", "mongodb", "mern"],
+  "keywords": [
+    "flask",
+    "react",
+    "node",
+    "mongodb",
+    "mern"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -25,5 +31,8 @@
   "homepage": "https://github.com/Carl0s4321/Snackoverflow#readme",
   "devDependencies": {
     "concurrently": "^9.2.1"
+  },
+  "dependencies": {
+    "vite": "^7.2.2"
   }
 }
