--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,14 @@
     "react-dom": "^19.1.1",
     "react-map-gl": "^8.1.0",
     "react-router-dom": "^7.9.5",
+    "react-webcam": "^7.2.0",
     "split-type": "^0.3.4",
     "tailwindcss": "^4.1.17",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@types/geojson": "^7946.0.14",
     "@eslint/js": "^9.36.0",
+    "@types/geojson": "^7946.0.14",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^24.6.0",
     "@types/react": "^19.2.2",
